# integral_constant_operators

./: .clang-format  .gitignore  CMakeLists.txt  LICENSE  README.md
.github/workflows/: clang-13.yaml  clang-14.yaml  gcc-11.yaml  gcc-12.yaml  generic.yaml
src/std_extensions/: integral_constant_operators
unit_test/: CMakeLists.txt
unit_test/std_extensions/: integral_constant_operators.cpp
